--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@storybook/react": "^7.6.13",
     "@storybook/test": "^7.6.13",
     "@storybook/test-runner": "^0.16.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -89,7 +90,7 @@
     "rimraf": "^5.0.5",
     "semantic-release": "^23.0.2",
     "start-server-and-test": "^2.0.3",
-    "storybook": "^7.6.13",
+    "storybook": "^7.6.14",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
